--- a/Engine/Config/Localization/Keywords.ini
+++ b/Engine/Config/Localization/Keywords.ini
@@ -15,11 +15,11 @@ CulturesToGenerate=zh-CN
 ;Gather text from metadata
 [GatherTextStep0]
 CommandletClass=GatherTextFromMetaData
-IncludePaths=./Source/Editor/*
-IncludePaths=./Source/Runtime/*
-IncludePaths=./Source/Developer/*
-ExcludePaths=*/Config/Localization/*
-ExcludePaths=*/Source/Developer/NoRedist/CommunityPortalServices/*
+IncludePaths=Source/Editor/*
+IncludePaths=Source/Runtime/*
+IncludePaths=Source/Developer/*
+ExcludePaths=Config/Localization/*
+ExcludePaths=Source/Developer/NoRedist/CommunityPortalServices/*
 InputKeys=Keywords
 OutputNamespaces=UObjectKeywords
 OutputKeys="{FieldPath}"
