Setup word count and conflict report generation for engine/editor targets in the legacy localization configuration scripts.
[CL 2533891 by Saul Abreu in Main branch]

--- a/Engine/Config/Localization/Editor.ini
+++ b/Engine/Config/Localization/Editor.ini
@@ -71,3 +71,12 @@ ResourceName=Editor.locres
 [GatherTextStep7]
 CommandletClass=InternationalizationExport
 bExportLoc=true
+
+;Write Text Localization Report
+[GatherTextStep8]
+CommandletClass=GenerateTextLocalizationReport
+DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+bWordCountReport=true
+WordCountReportName=Editor.csv
+bConflictReport=true
+ConflictReportName=EditorConflicts.txt
