--- a/Engine/Config/Localization/EditorTutorials.ini
+++ b/Engine/Config/Localization/EditorTutorials.ini
@@ -45,3 +45,12 @@ ResourceName=EditorTutorials.locres
 [GatherTextStep5]
 CommandletClass=InternationalizationExport
 bExportLoc=true
+
+;Write Text Localization Report
+[GatherTextStep6]
+CommandletClass=GenerateTextLocalizationReport
+DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+bWordCountReport=true
+WordCountReportName=EditorTutorials.csv
+bConflictReport=true
+ConflictReportName=EditorTutorialsConflicts.txt
