--- a/Engine/Config/Localization/Keywords.ini
+++ b/Engine/Config/Localization/Keywords.ini
@@ -47,3 +47,12 @@ ResourceName=Keywords.locres
 [GatherTextStep5]
 CommandletClass=InternationalizationExport
 bExportLoc=true
+
+;Write Text Localization Report
+[GatherTextStep6]
+CommandletClass=GenerateTextLocalizationReport
+DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+bWordCountReport=true
+WordCountReportName=Keywords.csv
+bConflictReport=true
+ConflictReportName=KeywordsConflicts.txt
