--- a/Engine/Config/Localization/Engine.ini
+++ b/Engine/Config/Localization/Engine.ini
@@ -71,3 +71,12 @@ ResourceName=Engine.locres
 [GatherTextStep6]
 CommandletClass=InternationalizationExport
 bExportLoc=true
+
+;Write Text Localization Report
+[GatherTextStep7]
+CommandletClass=GenerateTextLocalizationReport
+DestinationPath=\\partnersdc\NetworkShare\Users\SaulDavidAbreu
+bWordCountReport=true
+WordCountReportName=Engine.csv
+bConflictReport=true
+ConflictReportName=EngineConflicts.txt
