Temporarily disabled word count and conflict report generation from individual legacy localization configuration scripts for engine targets until promotion occurs. Also corrected a few warnings about deprecated settings in said localization configuration scripts.
[CL 2536071 by Saul Abreu in Main branch]

--- a/Engine/Config/Localization/Engine.ini
+++ b/Engine/Config/Localization/Engine.ini
@@ -1,4 +1,4 @@
-[CommonSettings]
+﻿[CommonSettings]
 SourcePath=Content/Localization/Engine
 DestinationPath=Content/Localization/Engine
 ManifestName=Engine.manifest
@@ -19,10 +19,10 @@ SearchDirectoryPaths=Source/Runtime/
 SearchDirectoryPaths=Source/Rocket/
 SearchDirectoryPaths=Source/Developer/
 SearchDirectoryPaths=Config/
-ExcludePaths=Config/Localization/*
-ExcludePaths=Source/Developer/NoRedist/CommunityPortalServices/*
-ExcludePaths=Source/Developer/NoRedist/UnrealEngineLauncherServices/*
-ExcludePaths=Source/Developer/NoRedist/BuildPatchServices/*
+ExcludePathFilters=Config/Localization/*
+ExcludePathFilters=Source/Developer/NoRedist/CommunityPortalServices/*
+ExcludePathFilters=Source/Developer/NoRedist/UnrealEngineLauncherServices/*
+ExcludePathFilters=Source/Developer/NoRedist/BuildPatchServices/*
 FileNameFilters=*.cpp
 FileNameFilters=*.h
 FileNameFilters=*.c
@@ -33,15 +33,15 @@ FileNameFilters=*.ini
 ;Gather text from assets
 [GatherTextStep1]
 CommandletClass=GatherTextFromAssets
-IncludePaths=Content/*
-ExcludePaths=Content/Editor/*
-ExcludePaths=Content/Developers/*
-ExcludePaths=Content/Localization/*
-ExcludePaths=Content/TestPackages/*
-ExcludePaths=Content/QA_Assets/*
-ExcludePaths=Content/EngineSounds/*
-ExcludePaths=Content/Maps/Automation/*
-ExcludePaths=Content/Tutorial/*
+IncludePathFilters=Content/*
+ExcludePathFilters=Content/Editor/*
+ExcludePathFilters=Content/Developers/*
+ExcludePathFilters=Content/Localization/*
+ExcludePathFilters=Content/TestPackages/*
+ExcludePathFilters=Content/QA_Assets/*
+ExcludePathFilters=Content/EngineSounds/*
+ExcludePathFilters=Content/Maps/Automation/*
+ExcludePathFilters=Content/Tutorial/*
 PackageFileNameFilters=*.umap
 PackageFileNameFilters=*.upk
 PackageFileNameFilters=*.uasset
@@ -72,11 +72,11 @@ ResourceName=Engine.locres
 CommandletClass=InternationalizationExport
 bExportLoc=true
 
-;Write Text Localization Report
-[GatherTextStep7]
-CommandletClass=GenerateTextLocalizationReport
-DestinationPath=\\partnersdc\NetworkShare\Users\SaulDavidAbreu
-bWordCountReport=true
-WordCountReportName=Engine.csv
-bConflictReport=true
-ConflictReportName=EngineConflicts.txt
+;;Write Text Localization Report
+;[GatherTextStep7]
+;CommandletClass=GenerateTextLocalizationReport
+;DestinationPath=\\partnersdc\NetworkShare\Users\SaulDavidAbreu
+;bWordCountReport=true
+;WordCountReportName=Engine.csv
+;bConflictReport=true
+;ConflictReportName=EngineConflicts.txt
