--- a/Engine/Config/Localization/Editor.ini
+++ b/Engine/Config/Localization/Editor.ini
@@ -1,4 +1,4 @@
-[CommonSettings]
+﻿[CommonSettings]
 ManifestDependencies=Content/Localization/Engine/Engine.manifest
 SourcePath=Content/Localization/Editor
 DestinationPath=Content/Localization/Editor
@@ -26,13 +26,13 @@ FileNameFilters=*.mm
 ;Gather text from metadata
 [GatherTextStep1]
 CommandletClass=GatherTextFromMetaData
-IncludePaths=Source/Editor/*
-IncludePaths=Source/Runtime/*
-IncludePaths=Source/Developer/*
-ExcludePaths=Config/Localization/*
-ExcludePaths=Source/Developer/NoRedist/CommunityPortalServices/*
-ExcludePaths=Source/Developer/NoRedist/UnrealEngineLauncherServices/*
-ExcludePaths=Source/Developer/NoRedist/BuildPatchServices/*
+IncludePathFilters=Source/Editor/*
+IncludePathFilters=Source/Runtime/*
+IncludePathFilters=Source/Developer/*
+ExcludePathFilters=Config/Localization/*
+ExcludePathFilters=Source/Developer/NoRedist/CommunityPortalServices/*
+ExcludePathFilters=Source/Developer/NoRedist/UnrealEngineLauncherServices/*
+ExcludePathFilters=Source/Developer/NoRedist/BuildPatchServices/*
 InputKeys=Category
 OutputNamespaces=UObjectCategories
 OutputKeys="{MetaDataValue}"
@@ -40,8 +40,8 @@ OutputKeys="{MetaDataValue}"
 ;Gather text from assets
 [GatherTextStep2]
 CommandletClass=GatherTextFromAssets
-IncludePaths=Content/Editor/*
-IncludePaths=Content/Editor*
+IncludePathFilters=Content/Editor/*
+IncludePathFilters=Content/Editor*
 PackageFileNameFilters=*.umap
 PackageFileNameFilters=*.upk
 PackageFileNameFilters=*.uasset
@@ -72,11 +72,11 @@ ResourceName=Editor.locres
 CommandletClass=InternationalizationExport
 bExportLoc=true
 
-;Write Text Localization Report
-[GatherTextStep8]
-CommandletClass=GenerateTextLocalizationReport
-DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
-bWordCountReport=true
-WordCountReportName=Editor.csv
-bConflictReport=true
-ConflictReportName=EditorConflicts.txt
+;;Write Text Localization Report
+;[GatherTextStep8]
+;CommandletClass=GenerateTextLocalizationReport
+;DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+;bWordCountReport=true
+;WordCountReportName=Editor.csv
+;bConflictReport=true
+;ConflictReportName=EditorConflicts.txt
