--- a/Engine/Config/Localization/EditorTutorials.ini
+++ b/Engine/Config/Localization/EditorTutorials.ini
@@ -1,4 +1,4 @@
-[CommonSettings]
+﻿[CommonSettings]
 SourcePath=Content/Localization/EditorTutorials
 DestinationPath=Content/Localization/EditorTutorials
 ManifestName=EditorTutorials.manifest
@@ -16,7 +16,7 @@ ModulesToPreload=IntroTutorials
 ;Gather text from assets
 [GatherTextStep0]
 CommandletClass=GatherTextFromAssets
-IncludePaths=Content/Tutorial/*
+IncludePathFilters=Content/Tutorial/*
 PackageFileNameFilters=*.umap
 PackageFileNameFilters=*.upk
 PackageFileNameFilters=*.uasset
@@ -46,11 +46,11 @@ ResourceName=EditorTutorials.locres
 CommandletClass=InternationalizationExport
 bExportLoc=true
 
-;Write Text Localization Report
-[GatherTextStep6]
-CommandletClass=GenerateTextLocalizationReport
-DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
-bWordCountReport=true
-WordCountReportName=EditorTutorials.csv
-bConflictReport=true
-ConflictReportName=EditorTutorialsConflicts.txt
+;;Write Text Localization Report
+;[GatherTextStep6]
+;CommandletClass=GenerateTextLocalizationReport
+;DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+;bWordCountReport=true
+;WordCountReportName=EditorTutorials.csv
+;bConflictReport=true
+;ConflictReportName=EditorTutorialsConflicts.txt
