--- a/Engine/Config/Localization/Keywords.ini
+++ b/Engine/Config/Localization/Keywords.ini
@@ -1,4 +1,4 @@
-[CommonSettings]
+﻿[CommonSettings]
 SourcePath=./Content/Localization/Keywords
 DestinationPath=./Content/Localization/Keywords
 ManifestName=Keywords.manifest
@@ -15,11 +15,11 @@ CulturesToGenerate=zh-CN
 ;Gather text from metadata
 [GatherTextStep0]
 CommandletClass=GatherTextFromMetaData
-IncludePaths=Source/Editor/*
-IncludePaths=Source/Runtime/*
-IncludePaths=Source/Developer/*
-ExcludePaths=Config/Localization/*
-ExcludePaths=Source/Developer/NoRedist/CommunityPortalServices/*
+IncludePathFilters=Source/Editor/*
+IncludePathFilters=Source/Runtime/*
+IncludePathFilters=Source/Developer/*
+ExcludePathFilters=Config/Localization/*
+ExcludePathFilters=Source/Developer/NoRedist/CommunityPortalServices/*
 InputKeys=Keywords
 OutputNamespaces=UObjectKeywords
 OutputKeys="{FieldPath}"
@@ -48,11 +48,11 @@ ResourceName=Keywords.locres
 CommandletClass=InternationalizationExport
 bExportLoc=true
 
-;Write Text Localization Report
-[GatherTextStep6]
-CommandletClass=GenerateTextLocalizationReport
-DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
-bWordCountReport=true
-WordCountReportName=Keywords.csv
-bConflictReport=true
-ConflictReportName=KeywordsConflicts.txt
+;;Write Text Localization Report
+;[GatherTextStep6]
+;CommandletClass=GenerateTextLocalizationReport
+;DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+;bWordCountReport=true
+;WordCountReportName=Keywords.csv
+;bConflictReport=true
+;ConflictReportName=KeywordsConflicts.txt
