--- a/Engine/Config/Localization/ToolTips.ini
+++ b/Engine/Config/Localization/ToolTips.ini
@@ -1,4 +1,4 @@
-[CommonSettings]
+﻿[CommonSettings]
 SourcePath=Content/Localization/ToolTips
 DestinationPath=Content/Localization/ToolTips
 ManifestName=ToolTips.manifest
@@ -15,11 +15,11 @@ CulturesToGenerate=zh-CN
 ;Gather text from metadata
 [GatherTextStep0]
 CommandletClass=GatherTextFromMetaData
-IncludePaths=Source/Editor/*
-IncludePaths=Source/Runtime/*
-IncludePaths=Source/Developer/*
-ExcludePaths=Config/Localization/*
-ExcludePaths=Source/Developer/NoRedist/CommunityPortalServices/*
+IncludePathFilters=Source/Editor/*
+IncludePathFilters=Source/Runtime/*
+IncludePathFilters=Source/Developer/*
+ExcludePathFilters=Config/Localization/*
+ExcludePathFilters=Source/Developer/NoRedist/CommunityPortalServices/*
 InputKeys=ToolTip
 OutputNamespaces=UObjectToolTips
 OutputKeys="{FieldPath}"
@@ -51,11 +51,11 @@ ResourceName=ToolTips.locres
 CommandletClass=InternationalizationExport
 bExportLoc=true
 
-;Write Text Localization Report
-[GatherTextStep6]
-CommandletClass=GenerateTextLocalizationReport
-DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
-bWordCountReport=true
-WordCountReportName=ToolTips.csv
-bConflictReport=true
-ConflictReportName=ToolTipsConflicts.txt
+;;Write Text Localization Report
+;[GatherTextStep6]
+;CommandletClass=GenerateTextLocalizationReport
+;DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+;bWordCountReport=true
+;WordCountReportName=ToolTips.csv
+;bConflictReport=true
+;ConflictReportName=ToolTipsConflicts.txt
