Removed bFixBroken=true in Localization/Engine.ini as the commandlet currently spams errors when it fails to use source control in resaving the packages it fixes.
[CL 2555569 by Saul Abreu in Main branch]

--- a/Engine/Config/Localization/Engine.ini
+++ b/Engine/Config/Localization/Engine.ini
@@ -45,7 +45,7 @@ ExcludePathFilters=Content/Tutorial/*
 PackageFileNameFilters=*.umap
 PackageFileNameFilters=*.upk
 PackageFileNameFilters=*.uasset
-bFixBroken=true
+bFixBroken=false
 ShouldGatherBlueprintPinNames=true
 
 ;Write Manifest
