Added word count and conflict report generation step into UE4 localization configuration scripts. Deleted word count localization configuration script and removed it from localization automation.
[CL 2555695 by Saul Abreu in Main branch]

--- a/Engine/Config/Localization/Engine.ini
+++ b/Engine/Config/Localization/Engine.ini
@@ -72,11 +72,11 @@ ResourceName=Engine.locres
 CommandletClass=InternationalizationExport
 bExportLoc=true
 
-;;Write Text Localization Report
-;[GatherTextStep7]
-;CommandletClass=GenerateTextLocalizationReport
-;DestinationPath=\\partnersdc\NetworkShare\Users\SaulDavidAbreu
-;bWordCountReport=true
-;WordCountReportName=Engine.csv
-;bConflictReport=true
-;ConflictReportName=EngineConflicts.txt
+;Write Text Localization Report
+[GatherTextStep7]
+CommandletClass=GenerateTextLocalizationReport
+DestinationPath=\\epicgames.net\root\UE3\Localization\WordCounts
+bWordCountReport=true
+WordCountReportName=Engine.csv
+bConflictReport=true
+ConflictReportName=EngineConflicts.txt
